--- a/_posts/2014-10-08-Trolls.md
+++ b/_posts/2014-10-08-Trolls.md
@@ -1,6 +1,9 @@
 ---
-layout: post
-title:  Kathy Sierra of Serious Pony on Trolls
+title:  "Kathy Sierra of Serious Pony on Trolls"
+slug:  "Kathy Sierra of Serious Pony on Trolls"
+redirect_from:
+  - /2015/11/a-revised-ostroms-design-principles-for-collective-governance-of-the-commons-/
+  - /2015/11/a-revised-ostroms-design-principles-for-collective-governance-of-the-commons-.html
 date:   2014-10-08 08:23:47 +0300
 # image:  02.jpg
 # tags:   Home
@@ -39,7 +42,7 @@ by Christopher Allen
 
 **original layout**
 
-[Security]() [Social]() [Software]() [Social]() [Web for Social Change]() [#SW4SX]() [Web/Tech]()
+[Security](https://www.lifewithalacrity.com/tags/security/) [Social]() [Software]() [Social]() [Web for Social Change]() [#SW4SX]() [Web/Tech]()
 
 Life With Alacrity
 
