--- a/_posts/2014-05-05-Look Up.md
+++ b/_posts/2014-05-05-Look Up.md
@@ -1,6 +1,10 @@
 ---
-layout: post
-title:  “Look Up” Your Strong Ties, Connect to Your Weak Ties
+title:  "“Look Up” Your Strong Ties, Connect to Your Weak Ties"
+slug:  "“Look Up” Your Strong Ties, Connect to Your Weak Ties"
+redirect_from:
+  - /2014/05/look-up-your-strong-ties-connect-to-your-weak-ties/
+  - /2014/05/look-up-your-strong-ties-connect-to-your-weak-ties.html
+
 date:   2014-05-05 12:02-07 +0300
 # image:  05.jpg
 # tags:   Home
@@ -10,6 +14,16 @@ Post by Christopher Allen. original layout
 
 
 **Life With Alacrity**
+
+One of my "Digital Influence" students at [Pinchot.edu](http://pinchot.edu/) asked me about my thoughts regarding this video.
+
+My response is "Yes, and…"
+
+It is a balance issue. You physically need personal connection, direct gaze, and intimacy, especially with your strong ties. But there are limits in your strong ties — 3-5 in your support circle, 10-15 in your sympathy circle, and a number in the low hundreds of your trust circle. These you should continue to find ways to meet and interact with face-to-face.
+
+However, our world is not served by many small tribes — ideas, discoveries, opportunities, jobs, marriages, etc. are much more discoverable through weak ties. These are your emotional circle and your familiar strangers. For every person you move from your emotional circle to your trust circle, someone else will be forced out. So use these social network tools for your emotional circle and familiar strangers, or to discover opportunities to meet with your trust or sympathy circles that you'd otherwise miss.
+
+For more this topic, see my blog post "Community by the Numbers: Personal Circles": http://www.lifewithalacrity.com/2008/11/personal-circle.html
 
 A blog on social software, collaboration, trust, security, privacy, and internet tools by Christopher Allen.
 
