--- a/_posts/2014-05-05-Look Up.md
+++ b/_posts/2014-05-05-Look Up.md
@@ -1,10 +1,9 @@
 ---
+layout: posts
 title:  "“Look Up” Your Strong Ties, Connect to Your Weak Ties"
 slug:  "“Look Up” Your Strong Ties, Connect to Your Weak Ties"
 redirect_from:
   - /2014/05/look-up-your-strong-ties-connect-to-your-weak-ties/
-  - /2014/05/look-up-your-strong-ties-connect-to-your-weak-ties.html
-
 date:   2014-05-05 12:02-07 +0300
 # image:  05.jpg
 # tags:   Home
