--- a/_posts/2014-10-08-Trolls.md
+++ b/_posts/2014-10-08-Trolls.md
@@ -1,9 +1,9 @@
 ---
+layout: posts
 title:  "Kathy Sierra of Serious Pony on Trolls"
 slug:  "Kathy Sierra of Serious Pony on Trolls"
 redirect_from:
   - /2014/10/kathy-sierra-of-serious-pony-on-trolls/
-  - /2014/10/kathy-sierra-of-serious-pony-on-trolls.html
 date:   2014-10-08 08:23:55 +0300
 
 ---
