--- a/_posts/2014-04-29-Playshop.md
+++ b/_posts/2014-04-29-Playshop.md
@@ -1,9 +1,9 @@
 ---
+layout: posts
 title:  "Playshop 5/10:Introduction to Group Works and the Group Pattern Language"
 slug:  "Playshop 5/10:Introduction to Group Works and the Group Pattern Language"
 redirect_from:
   - /2014/04/playshop-510-introduction-to-group-works-and-the-group-pattern-language/
-  - /2014/04/playshop-510-introduction-to-group-works-and-the-group-pattern-language.html
 date:   2014-04-29 14:51:07 +0300
 # image:  02.jpg
 # tags:   Home
