--- a/_posts/2014-04-29-Playshop.md
+++ b/_posts/2014-04-29-Playshop.md
@@ -20,10 +20,8 @@ A blog on social software, collaboration, trust, security, privacy, and internet
 
 **Playshop 5/10: Introduction to Group Works and the Group Pattern Language**
 
-April 29 2014 - 100 Words
-by Christopher Allen
 
-**original layout**
+original layout
 
 Life With Alacrity
 
