--- a/_posts/2014-10-08-Trolls.md
+++ b/_posts/2014-10-08-Trolls.md
@@ -22,7 +22,7 @@ However, this particular article crossed my domains on so many different levels 
 • Recent events are connecting me more to my roots in the online privacy movement.
 I know there isn't an easy solution to this problem, but I'm not even sure that there is a hard solution. I seek answers.
 
-KEYQUOTE: "The real problem — as my first harasser described — was that others were beginning to pay attention to me. He wrote as if mere exposure to my work was harming his world. 
+**KEYQUOTE:** "The real problem — as my first harasser described — was that others were beginning to pay attention to me. He wrote as if mere exposure to my work was harming his world. 
 
 But here’s the key: it turned out he wasn’t outraged about my work. His rage was because, in his mind, my work didn’t deserve the attention. Spoiler alert: “deserve” and “attention” are at the heart."
 ...
@@ -36,9 +36,9 @@ From the hater’s POV, you (the Koolaid server) do not “deserve” that atten
 October 8 2014 - 100 Words
 by Christopher Allen
 
-**original layout**
+original layout
 
-[Security](https://www.lifewithalacrity.com/tags/security/) [Social Software](https://www.lifewithalacrity.com/tags/social-software/)  [Social Web for Social Change #SW4SX](https://www.lifewithalacrity.com/tags/social-web-for-social-change-%23sw4sx/) [Web/Tech](https://www.lifewithalacrity.com/tags/web/tech/)
+[Security](/tags/security/) [Social Software](/tags/social-software/)  [Social Web for Social Change #SW4SX](/tags/social-web-for-social-change-%23sw4sx/) [Web/Tech](/tags/web/tech/)
 
 Life With Alacrity
 
