--- a/_posts/2014-05-05-Look Up.md
+++ b/_posts/2014-05-05-Look Up.md
@@ -9,11 +9,6 @@ date:   2014-05-05 12:02-07 +0300
 # tags:   Home
 ---
 
-Post by Christopher Allen. original layout
-
-
-**Life With Alacrity**
-
 One of my "Digital Influence" students at [Pinchot.edu](http://pinchot.edu/) asked me about my thoughts regarding this video.
 
 My response is "Yes, and…"
@@ -24,16 +19,9 @@ However, our world is not served by many small tribes — ideas, discoveries, op
 
 For more this topic, see my blog post "Community by the Numbers: Personal Circles": http://www.lifewithalacrity.com/2008/11/personal-circle.html
 
-A blog on social software, collaboration, trust, security, privacy, and internet tools by Christopher Allen.
+original layout
 
-**“Look Up” Your Strong Ties, Connect to Your Weak Ties**
-
-May 5 2014 - 100 Words
-by Christopher Allen
-
-**original layout**
-
-Community by the Numbers Social Software Social Web for Social Change #SW4SX
+[Community by the Numbers](/tags/community-by-the-numbers/), [Social Software](/tags/social-software/), [Social Web for Social Change #SW4SX](/tags/social-web-for-social-change-%23sw4sx/)
 
 Life With Alacrity
 
