--- a/_posts/2014-04-29-Playshop.md
+++ b/_posts/2014-04-29-Playshop.md
@@ -1,5 +1,5 @@
 ---
-layout: posts
+layout: single
 title:  "Playshop 5/10:Introduction to Group Works and the Group Pattern Language"
 slug:  "Playshop 5/10:Introduction to Group Works and the Group Pattern Language"
 redirect_from:
