--- a/_posts/2014-05-05-Look Up.md
+++ b/_posts/2014-05-05-Look Up.md
@@ -1,5 +1,5 @@
 ---
-layout: posts
+layout: single
 title:  "“Look Up” Your Strong Ties, Connect to Your Weak Ties"
 slug:  "“Look Up” Your Strong Ties, Connect to Your Weak Ties"
 redirect_from:
