--- a/_posts/2014-10-08-Trolls.md
+++ b/_posts/2014-10-08-Trolls.md
@@ -1,5 +1,5 @@
 ---
-layout: posts
+layout: single
 title:  "Kathy Sierra of Serious Pony on Trolls"
 slug:  "Kathy Sierra of Serious Pony on Trolls"
 redirect_from:
