--- a/_posts/2003-12-09-wbloggar.md
+++ b/_posts/2003-12-09-wbloggar.md
@@ -1,17 +1,30 @@
 ---
 layout: single
-title:  w.Bloggar
+title:  "w.Bloggar"
+slug:  "w.Bloggar"
+redirect_from:
+  - /2003/12/wbloggar/
 date:   2003-12-09 19:22:42 -0700
 # image:  02.jpg
 # tags:   Web/Tech Weblogs
 ---
 
 
-Stuart Henshal recommended that I try out w.Bloggar for creating blog posts. I'm giving it a try here.
+By [Christopher Allen](/about)
+
+[Stuart Henshal](http://www.henshall.com/blog/) recommended that I try out [w.Bloggar](http://wbloggar.com/) for creating blog posts. I'm giving it a try here.
 
 So far seems interesting -- in addition to spell checking and handling some html related tasks, it appears to also have the ability to work with various plugins, for instance, a Windows Media Player plugin to display what music I'm playing right now.
 
-[Listening to: Crimson (4-4) - Solace - Ahsas (04:15)]
+\[Listening to: Crimson (4-4) - Solace - Ahsas (04:15)\]
 
+ 
 Stuart says that one of his favorite features is that the tool will post to multiple blogs at once, which is useful if you are maintaining a business and a non-business blog and yet some items will go into both.
-original layout
+
+[original layout](/previous/2003/12/wbloggar.html)
+
+[Web/Tech](/tags/web/tech/) [Weblogs](/tags/weblogs/)
+
+Life With Alacrity
+
+© Christopher Allen
