--- a/_posts/2014-04-29-Playshop.md
+++ b/_posts/2014-04-29-Playshop.md
@@ -6,7 +6,7 @@ redirect_from:
   - /2014/04/playshop-510-introduction-to-group-works-and-the-group-pattern-language/
 date:   2014-04-29 14:51:07 +0300
 # image:  02.jpg
-# tags:   Home
+tags:   Home
 ---
 
 <img width="500" height="300" src="{{ site.url }}{{ site.baseurl }}/assets/images/SHARE_spot2_soup-300x300.jpg" alt="Playshop 5/10:Introduction to Group Works and the Group Pattern Language"/> 
@@ -21,7 +21,7 @@ A blog on social software, collaboration, trust, security, privacy, and internet
 **Playshop 5/10: Introduction to Group Works and the Group Pattern Language**
 
 
-original layout
+[original layout]
 
 Life With Alacrity
 
