--- a/_posts/2014-10-08-Trolls.md
+++ b/_posts/2014-10-08-Trolls.md
@@ -5,7 +5,7 @@ slug:  "Kathy Sierra of Serious Pony on Trolls"
 redirect_from:
   - /2014/10/kathy-sierra-of-serious-pony-on-trolls/
 date:   2014-10-08 08:23:55 +0300
-
+tags: untagged
 ---
 I don't like forwarding negative topics on social networks such as Facebook, largely because of an internal intuition that has since been confirmed scientifically about how emotions are contagious ( http://www.scientificamerican.com/.../facebook-emotions.../ ). Instead, I prefer to focus on solutions and the positive.
 
@@ -36,9 +36,8 @@ From the hater’s POV, you (the Koolaid server) do not “deserve” that atten
 October 8 2014 - 100 Words
 by Christopher Allen
 
-original layout
+[original layout]
 
-[Security](/tags/security/) [Social Software](/tags/social-software/)  [Social Web for Social Change #SW4SX](/tags/social-web-for-social-change-%23sw4sx/) [Web/Tech](/tags/web/tech/)
 
 Life With Alacrity
 
