--- a/_posts/2003-12-09-wbloggar.md
+++ b/_posts/2003-12-09-wbloggar.md
@@ -6,11 +6,11 @@ redirect_from:
   - /2003/12/wbloggar/
 date:   2003-12-09 19:22:42 -0700
 # image:  02.jpg
-# tags:   Web/Tech Weblogs
+tags:   Web/Tech Weblogs
 ---
 
 
-By [Christopher Allen](/about)
+By [Christopher Allen](/lwa/about)
 
 [Stuart Henshal](http://www.henshall.com/blog/) recommended that I try out [w.Bloggar](http://wbloggar.com/) for creating blog posts. I'm giving it a try here.
 
@@ -21,9 +21,8 @@ So far seems interesting -- in addition to spell checking and handling some html
  
 Stuart says that one of his favorite features is that the tool will post to multiple blogs at once, which is useful if you are maintaining a business and a non-business blog and yet some items will go into both.
 
-[original layout](/previous/2003/12/wbloggar.html)
+[original layout]
 
-[Web/Tech](/tags/web/tech/) [Weblogs](/tags/weblogs/)
 
 Life With Alacrity
 
