--- a/_posts/2014-05-05-Look Up.md
+++ b/_posts/2014-05-05-Look Up.md
@@ -6,7 +6,7 @@ redirect_from:
   - /2014/05/look-up-your-strong-ties-connect-to-your-weak-ties/
 date:   2014-05-05 12:02-07 +0300
 # image:  05.jpg
-# tags:   Home
+tags:   Home
 ---
 
 One of my "Digital Influence" students at [Pinchot.edu](http://pinchot.edu/) asked me about my thoughts regarding this video.
@@ -19,9 +19,7 @@ However, our world is not served by many small tribes — ideas, discoveries, op
 
 For more this topic, see my blog post "Community by the Numbers: Personal Circles": http://www.lifewithalacrity.com/2008/11/personal-circle.html
 
-original layout
-
-[Community by the Numbers](/tags/community-by-the-numbers/), [Social Software](/tags/social-software/), [Social Web for Social Change #SW4SX](/tags/social-web-for-social-change-%23sw4sx/)
+[original layout]
 
 Life With Alacrity
 
