--- a/_posts/2014-04-29-Playshop.md
+++ b/_posts/2014-04-29-Playshop.md
@@ -9,6 +9,8 @@ date:   2014-04-29 14:51:07 +0300
 tags:   Home
 ---
 
+By [Christopher Allen](/lwa/about)
+
 <img width="500" height="300" src="{{ site.url }}{{ site.baseurl }}/assets/images/SHARE_spot2_soup-300x300.jpg" alt="Playshop 5/10:Introduction to Group Works and the Group Pattern Language"/> 
 
 Post by Christopher Allen. original layout
