--- a/_posts/2014-05-05-Look Up.md
+++ b/_posts/2014-05-05-Look Up.md
@@ -9,6 +9,8 @@ date:   2014-05-05 12:02-07 +0300
 tags:   Home
 ---
 
+By [Christopher Allen](/lwa/about)
+
 One of my "Digital Influence" students at [Pinchot.edu](http://pinchot.edu/) asked me about my thoughts regarding this video.
 
 My response is "Yes, and…"
