--- a/_posts/2014-10-08-Trolls.md
+++ b/_posts/2014-10-08-Trolls.md
@@ -7,6 +7,9 @@ redirect_from:
 date:   2014-10-08 08:23:55 +0300
 tags: untagged
 ---
+
+By [Christopher Allen](/lwa/about)
+
 I don't like forwarding negative topics on social networks such as Facebook, largely because of an internal intuition that has since been confirmed scientifically about how emotions are contagious ( http://www.scientificamerican.com/.../facebook-emotions.../ ). Instead, I prefer to focus on solutions and the positive.
 
 However, this particular article crossed my domains on so many different levels I felt a need to pass it on.
