--- a/_posts/2014-10-08-Trolls.md
+++ b/_posts/2014-10-08-Trolls.md
@@ -3,12 +3,22 @@ layout: single
 title:  "Kathy Sierra of Serious Pony on Trolls"
 slug:  "Kathy Sierra of Serious Pony on Trolls"
 redirect_from:
+  - /2014/10/kathy-sierra-of-serious-pony-on-trolls.html
   - /2014/10/kathy-sierra-of-serious-pony-on-trolls/
 date:   2014-10-08 08:23:55 +0300
-tags: untagged
+tags: 
+  - Trolls
+
+categories:
+  - ephemera
+class:
+  - wide
+
+excerpt_seperator: <!--more-->
+permalink: /ephemera/kathy-sierra-of-serious-pony-on-trolls/
 ---
 
-By [Christopher Allen](/lwa/about)
+
 
 I don't like forwarding negative topics on social networks such as Facebook, largely because of an internal intuition that has since been confirmed scientifically about how emotions are contagious ( http://www.scientificamerican.com/.../facebook-emotions.../ ). Instead, I prefer to focus on solutions and the positive.
 
