--- a/_posts/2014-04-29-Playshop.md
+++ b/_posts/2014-04-29-Playshop.md
@@ -3,20 +3,24 @@ layout: single
 title:  "Playshop 5/10:Introduction to Group Works and the Group Pattern Language"
 slug:  "Playshop 5/10:Introduction to Group Works and the Group Pattern Language"
 redirect_from:
+  - /2014/04/playshop-510-introduction-to-group-works-and-the-group-pattern-language.html
   - /2014/04/playshop-510-introduction-to-group-works-and-the-group-pattern-language/
 date:   2014-04-29 14:51:07 +0300
 # image:  02.jpg
-tags:   Home
+tags: 
+  - Introduction
+  - Group-work
+
+categories:
+  - news
+class:
+  - wide
+
+excerpt_seperator: <!--more-->
+permalink: /news/playshop-510-introduction-to-group-works-and-the-group-pattern-language/
 ---
 
-By [Christopher Allen](/lwa/about)
-
 <img width="500" height="300" src="{{ site.url }}{{ site.baseurl }}/assets/images/SHARE_spot2_soup-300x300.jpg" alt="Playshop 5/10:Introduction to Group Works and the Group Pattern Language"/> 
-
-Post by Christopher Allen. original layout
-
-**Life With Alacrity**
-
 I am hosting on Saturday May 10th a 6-hour "Playshop" as an introduction to the Group Works Deck and the Group Pattern Language. This will be on Saturday on Bainbridge Island's Islandwood retreat center and sustainability campus.
 A blog on social software, collaboration, trust, security, privacy, and internet tools by Christopher Allen.
 
