--- a/_posts/2014-05-05-Look Up.md
+++ b/_posts/2014-05-05-Look Up.md
@@ -3,13 +3,22 @@ layout: single
 title:  "“Look Up” Your Strong Ties, Connect to Your Weak Ties"
 slug:  "“Look Up” Your Strong Ties, Connect to Your Weak Ties"
 redirect_from:
+  - /2014/05/look-up-your-strong-ties-connect-to-your-weak-ties.html
   - /2014/05/look-up-your-strong-ties-connect-to-your-weak-ties/
 date:   2014-05-05 12:02-07 +0300
 # image:  05.jpg
-tags:   Home
----
+tags: 
+  - Connect
+  - Digital
 
-By [Christopher Allen](/lwa/about)
+categories:
+  - ephemera
+class:
+  - wide
+
+excerpt_seperator: <!--more-->
+permalink: /ephemera/look-up-your-strong-ties-connect-to-your-weak-ties/
+---
 
 One of my "Digital Influence" students at [Pinchot.edu](http://pinchot.edu/) asked me about my thoughts regarding this video.
 
