--- a/_posts/2003-12-09-wbloggar.md
+++ b/_posts/2003-12-09-wbloggar.md
@@ -3,17 +3,25 @@ layout: single
 title:  "w.Bloggar"
 slug:  "w.Bloggar"
 redirect_from:
+  - /2003/12/wbloggar.html
   - /2003/12/wbloggar/
 date:   2003-12-09 19:22:42 -0700
 # image:  02.jpg
-tags:   Web/Tech Weblogs
+tags: 
+  - Web/Tech
+  - Weblogs
+
+categories:
+  - ephemera
+class:
+  - wide
+
+excerpt_seperator: <!--more-->
+permalink: /ephemera/wbloggar/
 ---
 
-
-By [Christopher Allen](/lwa/about)
-
 [Stuart Henshal](http://www.henshall.com/blog/) recommended that I try out [w.Bloggar](http://wbloggar.com/) for creating blog posts. I'm giving it a try here.
-
+<!--more-->
 So far seems interesting -- in addition to spell checking and handling some html related tasks, it appears to also have the ability to work with various plugins, for instance, a Windows Media Player plugin to display what music I'm playing right now.
 
 \[Listening to: Crimson (4-4) - Solace - Ahsas (04:15)\]
