--- a/_posts/2014-05-05-Look Up.md
+++ b/_posts/2014-05-05-Look Up.md
@@ -8,8 +8,7 @@ redirect_from:
 date:   2014-05-05 12:02-07 +0300
 # image:  05.jpg
 tags: 
-  - Connect
-  - Digital
+  - Community
 
 categories:
   - ephemera
