--- a/_posts/2014-10-08-Trolls.md
+++ b/_posts/2014-10-08-Trolls.md
@@ -7,7 +7,7 @@ redirect_from:
   - /2014/10/kathy-sierra-of-serious-pony-on-trolls/
 date:   2014-10-08 08:23:55 +0300
 tags: 
-  - Trolls
+  - Social Media
 
 categories:
   - ephemera
