resolve broken links

--- a/_posts/2003-12-09-wbloggar.md
+++ b/_posts/2003-12-09-wbloggar.md
@@ -20,7 +20,7 @@ excerpt_seperator: <!--more-->
 permalink: /ephemera/wbloggar/
 ---
 
-[Stuart Henshal](http://www.henshall.com/blog/) recommended that I try out [w.Bloggar](http://wbloggar.com/) for creating blog posts. I'm giving it a try here.
+[Stuart Henshal](https://web.archive.org/web/20050205095807/http://www.henshall.com/blog/) recommended that I try out [w.Bloggar](http://wbloggar.com/) for creating blog posts. I'm giving it a try here.
 <!--more-->
 So far seems interesting -- in addition to spell checking and handling some html related tasks, it appears to also have the ability to work with various plugins, for instance, a Windows Media Player plugin to display what music I'm playing right now.
 
