--- a/_tweets-md/2007/2007-06-01-tweets.md
+++ b/_tweets-md/2007/2007-06-01-tweets.md
@@ -1,5 +1,7 @@
 ---
 title: "Chocolate Chip Cookies"
+date: "2007-07-30"
+time:  00:00:00 +0000
 ---
 
 > Preparing my Mac portable for next week's WWDC\.
