--- a/_tweets-md/2007/2007-06-01-tweets.md
+++ b/_tweets-md/2007/2007-06-01-tweets.md
@@ -6,7 +6,7 @@ time:  00:00:00 +0000
 
 > Preparing my Mac portable for next week's WWDC\.
 
-<img src="/assets/images/media/tweet.ico" width="20" /> [Sat Jun 09 09:04:07 +0000 2007](https://twitter.com/ChristopherA/status/97073952)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="20" /> [Sat Jun 09 09:04:07 +0000 2007](https://twitter.com/ChristopherA/status/97073952)
 
 ----
 
