--- a/_tweets-md/2023/2023-01-01-tweets.md
+++ b/_tweets-md/2023/2023-01-01-tweets.md
@@ -1,5 +1,5 @@
 ---
-title: "Talk with cryptographers & semiconductor manufacturers about new silicon"
+title: "Talk with cryptographers & semiconductor manufacturers about new silicon..."
 date: "2023-01-31"
 time:  00:00:00 +0000
 ---
